[gd_scene load_steps=4 format=3 uid="uid://cgameover"]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1_gameover"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.09, 0.07, 0.95)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 48.0
content_margin_top = 48.0
content_margin_right = 48.0
content_margin_bottom = 48.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.22, 0.32, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.5, 0.28, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[node name="GameOver" type="CanvasLayer"]
layer = 20
script = ExtResource("1_gameover")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "White Wins!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Play Again"

[node name="MenuButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 22
text = "Menu"
